# ic-dbms

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  index.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md  dependencies.md  new_feature.md  perf.md  question.md
.github/workflows/: ci.yml  codeberg-mirror.yml  coverage.yml
crates/ic-dbms-api/: Cargo.toml  README.md
crates/ic-dbms-api/src/: dbms.rs  error.rs  lib.rs  utils.rs
crates/ic-dbms-canister/: Cargo.toml
crates/ic-dbms-canister/benches/: eager_relation.rs  read_table.rs
crates/ic-dbms-canister/src/: api.rs  dbms.rs  memory.rs  prelude.rs
crates/ic-dbms-client/: Cargo.toml  README.md
crates/ic-dbms-client/src/: client.rs  lib.rs  prelude.rs
crates/ic-dbms-macros/: Cargo.toml  README.md
crates/ic-dbms/example/: Cargo.toml
crates/ic-dbms/ic-dbms-api/: Cargo.toml
docs/: CNAME  SUMMARY.md  _config.yml  get-started.md  index.md  json.md  memory.md  sanitize.md  schema.md  validation.md
docs/_includes/: header.html  social.html
docs/guides/: access-control.md  client-api.md  crud-operations.md  custom-data-types.md  get-started.md  migrations.md  querying.md  relationships.md  transactions.md
docs/plans/: 2026-02-01-json-filter-design.md
docs/reference/: data-types.md  errors.md  json.md  migrations.md  sanitization.md  schema.md  validation.md
docs/technical/: architecture.md  join-engine.md  memory.md
docs/wasi/: wasi-memory-provider.md
example/: Cargo.toml
example/src/: lib.rs  main.rs
ic-dbms-api/: Cargo.toml  README.md
ic-dbms-api/src/: error.rs  lib.rs  prelude.rs  tests.rs  utils.rs  validate.rs
ic-dbms-api/src/dbms/: foreign_fetcher.rs  query.rs  transaction.rs  types.rs  value.rs
ic-dbms-api/src/dbms/query/: builder.rs  delete.rs  filter.rs
ic-dbms-api/src/dbms/query/filter/: json_filter.rs
ic-dbms-api/src/dbms/query/filter/json_filter/: path.rs
ic-dbms-api/src/dbms/sanitize/: clamp.rs  collapse_whitespace.rs  trim.rs
ic-dbms-api/src/dbms/table/: column_def.rs  record.rs  schema.rs
ic-dbms-api/src/dbms/types/: blob.rs  boolean.rs  date.rs  datetime.rs  decimal.rs  int32.rs  int64.rs  integers.rs  json.rs  nullable.rs  principal.rs  text.rs  uint32.rs  uint64.rs  uuid.rs
ic-dbms-api/src/memory/: encode.rs  error.rs
ic-dbms-api/src/validate/: case.rs  email.rs  locale.rs  phone.rs  strlen.rs  web.rs
ic-dbms-canister/: Cargo.toml
ic-dbms-canister/benches/: read_table.rs
ic-dbms-canister/src/: api.rs  dbms.rs  lib.rs  macros.rs  memory.rs  prelude.rs  query.rs  tests.rs  utils.rs  validation.rs
ic-dbms-canister/src/dbms/: integrity.rs  query.rs  schema.rs  table.rs  transaction.rs  types.rs  value.rs
ic-dbms-canister/src/dbms/integrity/: insert.rs  update.rs
ic-dbms-canister/src/dbms/query/: builder.rs  delete.rs  filter.rs
ic-dbms-canister/src/dbms/table/: column_def.rs  record.rs  schema.rs
ic-dbms-canister/src/dbms/transaction/: overlay.rs  session.rs
ic-dbms-canister/src/dbms/transaction/overlay/: reader.rs  table.rs
ic-dbms-canister/src/dbms/types/: blob.rs  boolean.rs  date.rs  datetime.rs  decimal.rs  int32.rs  int64.rs  nullable.rs  principal.rs  text.rs  uint32.rs  uint64.rs
ic-dbms-canister/src/memory/: acl.rs  encode.rs  error.rs  provider.rs  schema_registry.rs  table_registry.rs
ic-dbms-canister/src/memory/table_registry/: deleted_records_ledger.rs  free_segments_ledger.rs  page_ledger.rs  raw_record.rs  table_reader.rs  write_at.rs
ic-dbms-canister/src/memory/table_registry/deleted_records_ledger/: deleted_records.rs
ic-dbms-canister/src/memory/table_registry/free_segments_ledger/: free_segment.rs  free_segments_table.rs
ic-dbms-canister/src/memory/table_registry/page_ledger/: page_table.rs
ic-dbms-canister/src/tests/: message.rs  post.rs  user.rs
ic-dbms-canister/src/utils/: referenced_tables.rs
ic-dbms-canister/src/validation/: case.rs  color.rs  email.rs  locale.rs  phone.rs  strlen.rs  web.rs
ic-dbms-client/: Cargo.toml  README.md
ic-dbms-client/examples/: client.rs
ic-dbms-client/src/: client.rs  errors.rs  lib.rs  prelude.rs
ic-dbms-macros/: Cargo.toml  README.md
ic-dbms-macros/src/: dbms_canister.rs  encode.rs  lib.rs  table.rs
integration-tests/dbms-canister-client-integration/: Cargo.toml
integration-tests/pocket-ic-tests/: Cargo.toml
integration-tests/pocket-ic-tests-macro/: Cargo.toml
just/: bench.just  build.just  publish.just  test.just
wit/: dbms.wit
(+112 files in other folders)
