[workspace]
members = [
  "example",
  "ic-dbms-api",
  "ic-dbms-canister",
  "ic-dbms-client",
  "ic-dbms-macros",
  "integration-tests/pocket-ic-tests",
  "integration-tests/pocket-ic-tests-macro",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
repository = "https://github.com/veeso/ic-dbms"
license = "MIT"
keywords = ["ic", "dbms", "canister", "database", "async"]
categories = ["database", "network-programming", "wasm"]

[workspace.dependencies]
candid = { version = "0.10", features = ["value"] }
getrandom = { version = "0.3", default-features = false }
ic-cdk = "0.19"
ic-cdk-macros = "0.19"
lazy-regex = "3"
like = "0.3"
pocket-ic = "11"
proc-macro2 = "1"
quote = "1"
rust_decimal = "1"
serde = "1"
syn = "2"
thiserror = "2"
url = "2"
uuid = { version = "1", default-features = false, features = [
  "v7",
  "rng-getrandom",
] }
