[package]
name = "example"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Example ic-dbms-canister instance."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "expanded_example"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-dbms-api = { version = "0.0", path = "../ic-dbms-api" }
serde = { workspace = true }
