[package]
name = "ic-dbms-api"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/ic-dbms-api/"
description = "Public API types for ic-dbms-canister. This crate provides shared types for interacting and implementing the ic-dbms-canister."
include = [
  "examples/**/*",
  "src/**/*",
  "../LICENSE",
  "README.md",
  "../CHANGELOG.md",
  "../assets/images/cargo/logo-128.png",
]
readme = "README.md"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-dbms-macros = { version = "0.4", path = "../ic-dbms-macros" }
lazy-regex = { workspace = true }
like = { workspace = true }
percent-encoding = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
